<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <!-- This layout contains the upvote buttons for a post/comment -->
    <!-- See VoteBar.java -->

    <com.robinhood.ticker.TickerView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_gravity="center"
        android:textColor="@color/text_color"

        tools:text="1523"/>

    <ImageButton
        android:id="@+id/upvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/ripple_main_bg"

        android:contentDescription="@string/content_description_upvote"
        android:src="@drawable/ic_arrow_upward_24dp" />

    <ImageButton
        android:id="@+id/downvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@drawable/ripple_main_bg"
        android:contentDescription="@string/content_description_downvote"

        android:src="@drawable/ic_arrow_downward_24dp"/>
</LinearLayout>