...
    <string name="numCommentsThousands">%.1fK comments</string>
    <plurals name="numComments">
        <item quantity="one">%d comment</item>
        <item quantity="other">%d comments</item>
    </plurals>

    <string name="scoreHidden" translatable="false">•</string>
    <string name="scoreThousands">%.1fK</string>

    <string name="scoreWithText">%d points</string>
    <string name="scoreHiddenText">Score hidden</string>

    <string name="subreddit_prefixed" translatable="false">r/%s</string>
...
    <string name="oauthScopeExplanationWikiread">Allows the application to read subreddit wiki pages</string>
    <string name="oauthScopeHeader">"%s - "</string>
    <string name="newPermissionsRequiredHeader">New permissions required</string>
    <string name="newPermissionsRequiredContent">Please log in and out again to ensure the application works as expected.\n\nBelow are a list of the new permissions required.</string>
    <string name="newPermissionsDontShowAgain">Don\'t show again</string>

    <string name="commentHasBeenArchivedVote">The comment is archived</string>
    <string name="postHasBeenArchivedVote">The post is archived</string>

    <string name="inboxAllMessages">All messages</string>
    <string name="inboxUnreadMessages">Unread</string>
    <string name="inboxNoMessages">No messages found here</string>
    <string name="inboxCommentFrom">"Comment from "</string>
    <string name="inboxMessageFrom">"Message from "</string>
...
